--- a/uzduotis3.html
+++ b/uzduotis3.html
@@ -8,28 +8,28 @@
   </head>
   <body>
     <div class="container">
-      <div class="box-1">1</div>
-      <div class="box-2">2</div>
-      <div class="box-3">3</div>
-      <div class="box-4">4</div>
-      <div class="box-5">5</div>
-      <div class="box-6">6</div>
-      <div class="box-7">7</div>
-      <div class="box-8">8</div>
-      <div class="box-9">9</div>
-      <div class="box-10">10</div>
-      <div class="box-11">11</div>
-      <div class="box-12">12</div>
-      <div class="box-13">13</div>
-      <div class="box-14">14</div>
-      <div class="box-15">15</div>
-      <div class="box-16">16</div>
-      <div class="box-17">17</div>
-      <div class="box-18">18</div>
-      <div class="box-19">19</div>
-      <div class="box-20">20</div>
-      <div class="box-21">21</div>
-      <div class="box-22">22</div>
+      <div class="box-1 deco">1</div>
+      <div class="box-2 deco">2</div>
+      <div class="box-3 deco">3</div>
+      <div class="box-4 deco">4</div>
+      <div class="box-5 deco">5</div>
+      <div class="box-6 deco">6</div>
+      <div class="box-7 deco">7</div>
+      <div class="box-8 deco">8</div>
+      <div class="box-9 deco">9</div>
+      <div class="box-10 deco">10</div>
+      <div class="box-11 deco">11</div>
+      <div class="box-12 deco">12</div>
+      <div class="box-13 deco">13</div>
+      <div class="box-14 deco">14</div>
+      <div class="box-15 deco">15</div>
+      <div class="box-16 deco">16</div>
+      <div class="box-17 deco">17</div>
+      <div class="box-18 deco">18</div>
+      <div class="box-19 deco">19</div>
+      <div class="box-20 deco">20</div>
+      <div class="box-21 deco">21</div>
+      <div class="box-22 deco">22</div>
     </div>
   </body>
 </html>
